Frontend: CSS fix to avoid materials spilling over the extremly small working area

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -36,3 +36,8 @@ h1 {
   margin-top: 0px;
   padding-top: 10px;
 }
+
+.product {
+  overflow-y: scroll;
+  height: 671px;
+}
